package com.example.evaluation_wallois_arthur.interfaces;

public interface Deplacable {
    void voler();
    void nager();
    void marcher();
} 